--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
     package="senac.saveyourmemories">
-    <usa-feature android:name="android.hardware.camera" android:requerido = "true" />
+
+    <uses-feature android:name="android.hardware.camera" android:required="true" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="18" />
+
+
     <dist:module dist:instant="true" />
 
     <application
@@ -34,7 +35,7 @@
             </intent-filter>
         </activity><provider
         android:name="androidx.core.content.FileProvider"
-        android:authorities="sanac.android.fileprovider"
+        android:authorities="senac.fileprovider"
         android:exported="false"
         android:grantUriPermissions="true">
         <meta-data
